# MeshEditor

./: CMakeLists.txt  README.md  main.cpp  mainWindow.cpp  mainWindow.h
UIs/: mainWindow.ui
